examples/test/testpolicy10313.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10313
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key16: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value26
          key4: value42
          key13: value39
      podSelector:
        matchLabels:
          key14: value7
          key45: value17
          key26: value3
